conformance/tests/httproute-filter-request-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filter-request-redirect
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /redirect
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: FilterRequestRedirect
        filterRequestRedirect:
          scheme: https
          hostname: www.redirect-example.com
          port: 443
